# ECHO

./: .gitignore  README.md  Validation-Distilled HyperMask：面向鲁棒 SFT 的自适应学习信号筛选.md  environment-v100.yml  environment.yml  pyproject.toml  requirements.txt  simple_self_cleaning_sft_memo.md
configs/: claim1_stage1_echo_reasoning_raw_qwen_v100.yaml  claim1_stage1_sft_reasoning_matched_qwen_v100.yaml  claim1_stage1_teacher_student_answer_focus_qwen_v100.yaml  claim1_stage1_teacher_student_solver_sharp_qwen_v102.yaml  claim1_stage2_echo_math_qwen_v100.yaml  claim1_stage2_full_sft_matched_qwen_v100.yaml  claim1_stage2_full_sft_matched_teacher_student_qwen_v101.yaml  claim1_stage2_teacher_student_answer_focus_qwen_v100.yaml  claim1_teacher_sanity_answer_focus_qwen_v101.yaml  claim1_teacher_sanity_final_answer_only_qwen_v103.yaml  claim1_teacher_sanity_solver_sharp_qwen_v102.yaml  claim1_teacher_sanity_toploss_init_only_qwen_v102.yaml  claim1_teacher_sanity_toploss_init_refine_qwen_v102.yaml  eval_generation_claim1_clean_qwen_v100.yaml  eval_generation_claim1_final_answer_qwen_v100.yaml  eval_generation_claim1_quick_qwen_v100.yaml  eval_generation_claim1_teacher_student_answer_focus_qwen_v100.yaml  eval_generation_claim1_teacher_student_with_full_sft_qwen_v101.yaml  eval_generation_qwen_v100.yaml  eval_generation_qwen_v100_smoke.yaml  fast_eval_proxy_qwen_v100_echo_sft_dual_stage.yaml  lm_eval_claim1_math_fast_qwen_v100.yaml  lm_eval_qwen_v100.yaml  lm_eval_qwen_v100_2690_stage2_adaptive.yaml  lm_eval_qwen_v100_sft_baselines.yaml  lm_eval_qwen_v100_warmup.yaml  (+17 more)
(+47 files in other folders)
